--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.3.1",
     "next": "^13.4.2",
+    "openai": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
